# rust_toys

./: README.md
city_info/: Cargo.toml  README.md
city_info/city_info/lib/data_fetchers/: Cargo.toml
city_info/city_info/lib/data_fetchers/src/: city_stats_api.rs  city_stats_fetcher.rs  lib.rs  weather_api.rs  weather_fetcher.rs
city_info/city_info/lib/data_fetchers/tests/: city_data_source.rs
city_info/city_info/lib/dispatcher/: Cargo.toml
city_info/city_info/lib/dispatcher/src/: lib.rs
city_info/city_info/lib/rest_api/: Cargo.toml
city_info/city_info/lib/rest_api/src/: lib.rs
telephone/: Cargo.toml  README.md
telephone/modifiers/: Cargo.toml
telephone/modifiers/src/: lib.rs
telephone/telephone_game/: Cargo.toml
telephone/telephone_game/src/: main.rs
