[package]
name = "data_fetchers"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
serde = {version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = {version = "1.39.3", features = ["full"] }
tokio-util = "0.7.12"
tracing = { version = "0.1.40" }

[dev_dependencies]
data_fetchers = { path = "." }
